update: python 77.md

--- a/python/contents/77.md
+++ b/python/contents/77.md
@@ -160,7 +160,7 @@
         def __str__(self):
             return "%s:%s:%s:%s:%s"%(self.id,self.name,self.age,self.sex,self.classid)
 
-        # 自定义对应的表名，默认表名：myapp_stu
+        # 自定义对应的表名，默认表名：app_stu
         class Meta:
             db_table="stu"
     ```
@@ -215,7 +215,7 @@
     ```python
     from django.shortcuts import render
     from django.http  import HttpResponse
-    from myapp.models import Stu
+    from app.models import Stu
     # Create your views here.
 
     def index(request):
