update: python 77.md

--- a/python/contents/77.md
+++ b/python/contents/77.md
@@ -168,7 +168,7 @@
 3 ) **激活模型**
 
 - 要将该应用程序包括在我们的项目中，我们需要在设置中添加对其配置类的引用INSTALLED_APPS
-- 该appConfig班是在app/apps.py文件中，所以它的虚线路径'app.apps.appConfig'
+- 该appConfig是在app/apps.py文件中，所以它的访问路径'app.apps.AppConfig'
 - 编辑DjangoApp/settings.py文件，并将该虚线路径添加到该INSTALLED_APPS设置
     ```python
     INSTALLED_APPS  =  [ 
@@ -178,7 +178,7 @@
         'django.contrib.sessions',
         'django.contrib.messages',
         'django.contrib.staticfiles',
-        'app.apps.appConfig',  # 这里或者直接写 'app'
+        'app.apps.AppConfig',  # 这里或者直接写 'app'
     ]
     ```
 
