--- a/python/contents/83.md
+++ b/python/contents/83.md
@@ -225,11 +225,12 @@
 
 ### 相关代码示例
 
-- 更多示例详见[代码仓库](https://github.com/johnnynode/Django-1.11.11-ajax)
-    * 城市联动
-    * 文件上传
-    * 分页
-    * 富文本编辑器
-    * session状态维持
-    * 中间件
-    * 密码管理
+- 城市联动
+- 文件上传
+- 分页
+- 富文本编辑器
+- session状态维持
+- 中间件
+- 密码管理
+- 示例详见[代码仓库](https://github.com/johnnynode/Django-1.11.11-ajax)
+    
