update: python 83.md

--- a/python/contents/83.md
+++ b/python/contents/83.md
@@ -3,7 +3,6 @@
 - 项目中的CSS、图片、js都是静态文件
 - 备注：本文基于django版本1.11展开, 技术栈会有所升级, 仅供参考！
 
-
 1 ） **配置静态文件**
 
 - 在settings 文件中定义静态内容
@@ -28,13 +27,13 @@
 
 ### Csrf
 
-> CSRF（Cross-site request forgery）跨站请求伪造，也被称为“One Click Attack”或者Session Riding，通常缩写为CSRF或者XSRF，是一种对网站的恶意利用。尽管听起来像跨站脚本XSS，但它与XSS非常不同，XSS利用站点内的信任用户，而CSRF则通过伪装来自受信任用户的请求来利用受信任的网站。与XSS攻击相比，CSRF攻击往往不大流行（因此对其进行防范的资源也相当稀少）和难以防范，所以被认为比XSS更具危险性
+- CSRF（Cross-site request forgery）跨站请求伪造，也被称为“One Click Attack”或者Session Riding，通常缩写为CSRF或者XSRF，是一种对网站的恶意利用。尽管听起来像跨站脚本XSS，但它与XSS非常不同，XSS利用站点内的信任用户，而CSRF则通过伪装来自受信任用户的请求来利用受信任的网站。与XSS攻击相比，CSRF攻击往往不大流行（因此对其进行防范的资源也相当稀少）和难以防范，所以被认为比XSS更具危险性
 
-> CSRF中间件和模板标签为防止跨站点请求伪造提供了易用的保护。
+- CSRF中间件和模板标签为防止跨站点请求伪造提供了易用的保护。
 
-> 当恶意网站包含链接，表单按钮或某些旨在在您的网站上执行某些操作的JavaScript时，会使用在浏览器中访问恶意网站的登录用户的凭据进行此类攻击。
+- 当恶意网站包含链接，表单按钮或某些旨在在您的网站上执行某些操作的JavaScript时，会使用在浏览器中访问恶意网站的登录用户的凭据进行此类攻击。
 
-> 还介绍了一种相关攻击类型，即“登录CSRF”，攻击网站欺骗用户的浏览器，以便使用其他人的凭证登录到网站。
+- 还介绍了一种相关攻击类型，即“登录CSRF”，攻击网站欺骗用户的浏览器，以便使用其他人的凭证登录到网站。
 
 1 ) **csrf的使用**
 
@@ -51,8 +50,9 @@
 2 ) **取消保护**
 
 - 如果某些视图不需要保护，可以使用装饰器csrf_exempt，模板中也不需要写标签，修改csrf2的视图如下 
-    * `from django.views.decorators.csrf import csrf_exempt`
     ```python
+    from django.views.decorators.csrf import csrf_exempt
+
     @csrf_exempt 
     def csrf2(request):
         uname=request.POST['uname'] 
