update: python README

--- a/python/contents/81.md
+++ b/python/contents/81.md
@@ -291,7 +291,7 @@
 
 - 首页视图index
     ```python
-    logo='welcome to itcast'
+    logo='welcome to view'
     def index(request):
         return render(request, 'temtest/index.html', {'logo': logo})
     ```
