--- a/python/contents/82.md
+++ b/python/contents/82.md
@@ -15,8 +15,10 @@
 </head>
 <body>
     <form method="post" action="upload/" enctype="multipart/form-data">
-        <input type="text" name="title"><br>
-        <input type="file" name="pic"/><br>
+         {% csrf_token %}
+        <input type="file" name="pic"/>
+        <br>
+        <br>
         <input type="submit" value="上传">
     </form>
 </body>
@@ -31,14 +33,18 @@ from django.http import HttpResponse
 from PIL import Image
 import time,os
 
+# 文件上传接口
+# @csrf_exempt
+# 上面的装饰器可以取消form表单点的post验证
 def upload(request):
     '''执行图片的上传'''
-    myfile = request.FILES.get("mypic",None)
-    if not myfile:
+    file = request.FILES.get("pic", None)
+    if not file:
         return HttpResponse("没有上传文件信息")
-    filename = str(time.time())+"."+myfile.name.split('.').pop()
+    filename = str(time.time())+"."+file.name.split('.').pop()
+    # 开始写入文件
     destination = open("./static/pics/"+filename,"wb+")
-    for chunk in myfile.chunks():      # 分块写入文件  
+    for chunk in file.chunks():    # 分块写入文件
         destination.write(chunk)  
     destination.close()
 
@@ -46,13 +52,13 @@ def upload(request):
     im = Image.open("./static/pics/"+filename)
     # 缩放到75*75(缩放后的宽高比例不变):
     im.thumbnail((75, 75))
-    # 把缩放后的图像用jpeg格式保存: 
-    im.save("./static/pics/s_"+filename,None)
+    # 把缩放后的图像用jpeg格式保存:
+    im.save("./static/pics/s_"+filename, None)
 
     #执行图片删除
     #os.remove("./static/pics/"+filename)
 
-    return HttpResponse("上传成功！图片："+filename）
+    return HttpResponse("上传成功！图片：" + filename)
 ```
 
 3 ) **使用模型处理上传文件**
@@ -110,42 +116,58 @@ def upload(request):
     ```python
     from django.core.paginator import Paginator
 
-    def pagTest(request, pIndex):
-        list1 = AreaInfo.objects.filter(aParent__isnull=True)
-        p = Paginator(list1, 10)
+    # 分页页面
+    def page(request, pIndex):
+        all = Users.objects.all()
+        p = Paginator(all, 1) # 1条数据1页
         if pIndex == '':
             pIndex = '1'
+        list = p.page(pIndex)
         pIndex = int(pIndex)
-        list2 = p.page(pIndex)
-        plist = p.page_range
-        return render(request, 'booktest/pagTest.html', {'list': list2, 'plist': plist, 'pIndex': pIndex})
+        list = p.page(pIndex)
+        plist = p.page_range # 页码
+        context = {'list': list, 'plist': plist, 'pIndex': pIndex}
+        return render(request, 'app/page.html', context)
     ```
 
-- 配置url `url(r'^pag(?P<pIndex>[0-9]*)/$', views.pagTest, name='pagTest'),`
+- 配置url `url(r'^page(?P<pIndex>[0-9]*)/$', views.pagTest, name='pagTest'),`
 
-- 定义模板pagTest.html
+- 定义模板page.html
     ```html
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-    <ul>
-    {%for area in list%}
-    <li>{{area.id}}--{{area.atitle}}</li>
-    {%endfor%}
-    </ul>
+    {% extends "common/base.html" %}
 
-    {%for pindex in plist%}
-    {%if pIndex == pindex%}
-    {{pindex}}&nbsp;&nbsp;
-    {%else%}
-    <a href="/pag{{pindex}}/">{{pindex}}</a>&nbsp;&nbsp;
-    {%endif%}
+    {% block content %}
+    <h3>page 分页示例</h3>
+    <hr />
+
+    <table border=1>
+        <tr><th>ID</th><th>姓名</th><th>年龄</th><th>手机</th><th>创建时间</th></tr>
+        {%for u in list%}
+            <tr>
+                <td>{{ u.id }}</td>
+                <td>{{ u.name }}</td>
+                <td>{{ u.age }}</td>
+                <td>{{ u.phone }}</td>
+                <td>{{ u.createTime | date:'Y-m-d H:i:s' }}</td>
+            </tr>
+        {%endfor%}
+    </table>
+
+    <br/>
+    <br/>
+    <br/>
+
+    {% for i in plist %}
+        {% if pIndex == i %}
+            <b style="color:red">{{i}}</b>
+            &nbsp;&nbsp;
+        {% else %}
+            <a href="{% url 'page' i %}">{{i}}</a>
+            &nbsp;&nbsp;
+        {%endif%}
     {%endfor%}
-    </body>
-    </html>
+
+    {% endblock %}
     ```
 
 ### Django部署(Apache)
