--- a/python/contents/83.md
+++ b/python/contents/83.md
@@ -23,7 +23,7 @@
 - 在模板中可以使用static编码
     ```html
     { % load static from staticfiles % }
-    <img src="{ % static "my_app/myexample.jpg" % }" alt="My image"/>
+    <img src="{ % static "app/myexample.jpg" % }" alt="My image"/>
     ```
 
 ### Csrf
@@ -180,31 +180,13 @@
 
 - 在应用中创建AdminLoginMiddleware.py文件
     ```python
-    from django.shortcuts import render
-    from django.http import HttpResponse
-    import re
-
-    class AdminLoginMiddleware:
+    class AppMiddleware:
         def __init__(self, get_response):
             self.get_response = get_response
-            # One-time configuration and initialization.
+            print('middleware init!')
 
         def __call__(self, request):
-
-
-            # 检测当前的请求是否已经登录,如果已经登录,.则放行,如果未登录,则跳转到登录页
-            # 获取当前用户的请求路径  /admin/开头  但不是 /admin/login/  /admin/dologin/   /admin/verifycode
-            urllist = ['/admin/login','/admin/dologin','/admin/vcode']
-            # 判断是否进入了后台,并且不是进入登录页面
-            if re.match('/admin/',request.path) and request.path not in urllist:
-
-                # 检测session中是否存在 adminlogin的数据记录
-                if request.session.get('Vuser','') == '':
-                    # 如果在session没有记录,则证明没有登录,跳转到登录页面
-                    return HttpResponse('<script>alert("请先登录");location.href="/admin/login";</script>')
-
-
-
+            print('middleware call!')
             response = self.get_response(request)
             return response
     ```
@@ -214,15 +196,8 @@
 - 在settings.py文件中修改MIDDLEWARE_CLASSES选项
     ```python
     MIDDLEWARE = [
-        'django.middleware.security.SecurityMiddleware',
-        'django.contrib.sessions.middleware.SessionMiddleware',
-        'django.middleware.common.CommonMiddleware',
-        'django.middleware.csrf.CsrfViewMiddleware',
-        'django.contrib.auth.middleware.AuthenticationMiddleware',
-        'django.contrib.messages.middleware.MessageMiddleware',
-        'django.middleware.clickjacking.XFrameOptionsMiddleware',
         #自定义的中间件
-        'myadmin.AdminMiddleware.AdminLoginMiddleware'
+        'app.app_middleware.AppMiddleware'
     ]
     ```
 
@@ -248,9 +223,13 @@
     return HttpResponse("123456的md5是:" + str)
     ```
 
-### 扩展
+### 相关代码示例
 
-- 
-- 
-- 
-- 
+- 更多示例详见[代码仓库](https://github.com/johnnynode/Django-1.11.11-ajax)
+    * 城市联动
+    * 文件上传
+    * 分页
+    * 富文本编辑器
+    * session状态维持
+    * 中间件
+    * 密码管理
