--- a/c-c++/contents/5.md
+++ b/c-c++/contents/5.md
@@ -97,3 +97,39 @@ int main() {
 - 变量可以多次赋值
 - 常数直接在CPU中参与运算
 - 符号常量也是常数，不占内存
+
+### 几个c小程序例子
+
+1. 求两个数之和
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+int main(int argc, char *argv[]) {
+    int a,b,sum;
+    a = 123;
+    b = 456;
+    sum = a+b;
+    printf("sum is %d\n", sum);
+    return 0;
+}
+```
+
+2. 输出几个字符
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char *argv[]) {
+    char a,b,c;
+    int d;
+    a='\5';
+    b='\60';
+    c='A';
+    d=1089;
+    printf("a=%c b=%c c=%d d=%c\n", a, b, c, d);
+
+    return 0;
+}
+```
