update: bootstrap 1.md

--- a/web-framework/contents/bootstrap/contents/1.md
+++ b/web-framework/contents/bootstrap/contents/1.md
@@ -34,7 +34,7 @@
 ### Bootstrap框架
 
 - Twitter 公司两位前端工程师（mark otto && jacob thornton）在2011发起开发完成的。
-- 官方网站：http://getbootstarp.com/ 
+- 官方网站：https://getbootstrap.com/
 - 中文网站：http://www.bootcss.com/
 - 特点：简介，直观、强悍的前端开发框架, 让web开发更迅速、简单
 
