update: bootstrap 2.md

--- a/web-framework/contents/bootstrap/contents/2.md
+++ b/web-framework/contents/bootstrap/contents/2.md
@@ -17,6 +17,10 @@
     @media (min-width: 1200px){}
     ```
 
+- 媒体查询的旧版的兼容写法: 
+    * `<link rel="stylesheet" media="screen and (min-width:1px) and (max-width:767px)" href="/css/d1.css" />`
+    * `<link rel="stylesheet" media="screen and (min-width:1200px)" href="/css/d2.css" />`
+
 ### 结构选择器
 
 - 相邻选择符 (E+F)
