update: management 2.md

--- a/management/contents/2.md
+++ b/management/contents/2.md
@@ -101,3 +101,82 @@
 <div align="center">
     <img width="500" src="../screenshot/11.jpg">
 </div>
+
+### 商城项目案例
+
+1 ） **确立项目**
+
+- 商城项目（B2C）单商家模式
+
+2 ） **项目功能介绍**
+
+本商城项目分为网站前台和网站后台管理两部分
+
+2.1 **网站前台**
+
+- 网站首页商品展示：推荐商品，分类展示部分商品，热卖商品，新商品等展示
+- 商品列表页：分页展示某类别或指定条件（搜索）的部分商品列表信息。
+- 商品详情页：通过商品ID号来展示指定商品详情信息。
+- 购物车管理：添加、查看、删除、清空等自己的购物信息。
+- 会员模块：注册，登录、退出以及进入会员中心
+- 会员中心：个人信息管理、我的订单信息
+- 订单处理
+- 其他扩展：商品评论、商品多图；会员收货地址管理，商品收藏；首页轮播图；站内公告、新闻；友情链接；
+
+2.2 **网站后台管理**
+
+- 后台操作：登录、退出
+- 会员信息管理：查看、修改会员状态、重置密码
+- 商品类别信息管理：添加、删除、修改、查看商品类别信息
+- 商品信息管理：添加、删除、修改、查看
+- 订单信息管理：查看订单、订单详情、处理订单
+- 其他扩展：商品评论管理、商品多图管理；会员收货地址管理，商品收藏；首页轮播图管理；站内公告、新闻管理；友情链接管理
+
+3 ） **绘制项目的功能模块 和操作流程图**
+
+3.1 **商城项目功能模块图**
+
+<div align="center">
+    <img width="500" src="../screenshot/12.jpg">
+</div>
+
+3.2 **商城前台用户操作流程图**
+
+<div align="center">
+    <img width="500" src="../screenshot/13.jpg">
+</div>
+
+3.3 **商城后台管理员操作流程图**
+
+<div align="center">
+    <img width="500" src="../screenshot/14.jpg">
+</div>
+
+4 ） **具体功能描述**
+
+- 针对与商场网站的每个功能块进行详细描述，主要包含以下几个方面：
+    * 功能名称、编号、设计者、时间
+    * 功能框图及说明
+    * 操作权限
+    * 需要哪些输入
+    * 具体执行过程内容
+    * 输出结果
+    * 业务数据流：DFD图
+    * 功能效果预览
+
+5 ） **项目运行环境要求**
+
+- 服务器环境要求：服务器数量，类型和用途；以及每台服务器的配置要求
+- 软件环境：Python、MySQL、框架Django的版本要求
+- 各种接口标准要求（支付、微信、短信等接口）
+
+6 ） **项目具体完成时间和报价**
+
+- 项目开发进度计划表，时间周期的安排
+- 项目总体报价，以及每个模块的报价、付款方式
+- 项目违约处理，后期功能附加条款处理等事项说明
+
+7 ） **验收标准**
+
+- 项目模块功能的完成情况
+- 项目的执行性能（如：网站的响应时间值：正常<=3秒)
