update: management 2.md

--- a/management/contents/2.md
+++ b/management/contents/2.md
@@ -24,7 +24,7 @@
 
 那哪种类型的项目应该用哪种开发方式？Stacey就给出了一些建议：简单的项目，需求很清楚，怎么实现也很清楚，那就应该用预测型。这样成本最优，也是完全在我们掌控之内。第二种就是需求清楚，不知道怎么实现，这类项目可以用迭代的方式，就是说我不断地尝试，这版不理想，我下一个版本去优化。第三类就是我们说的烧脑的项目，就是虽然我们实现的方法，并没有什么创新的技术，但是需求说不清楚，这怎么办？这类项目其实可以用增量的方式，就是说你能说清楚一部分，我给你实现一部分，你再想明白一部分，我再给你再实现一部分，这就是增量开发的方式。那混乱的，既说不清需求，也不知道怎么做，这类项目应该用什么开发方式？这类项目不要碰，尽量地躲远点！最后一种就是模糊的项目，用的应该就是敏捷的方法，就是适应性很强的这种开发模式，才能够做出这种需求和方案都不是很清楚，都处于模糊状态的这样的项目类型。
 
-### 软件开发过程的划分
+### 项目开发过程的划分
 
 <div align="center">
     <img width="700" src="../screenshot/1.jpg">
