update: management 2.md

--- a/management/contents/2.md
+++ b/management/contents/2.md
@@ -63,7 +63,7 @@
 <hr />
 
 <div align="center">
-    <img width="700" src="../screenshot/3.jpg">
+    <img width="600" src="../screenshot/3.jpg">
 </div>
 
 ### 项目开发过程域遵循的标准文档
@@ -140,7 +140,7 @@
 
 本商城项目分为网站前台和网站后台管理两部分
 
-2.1 **网站前台**
+2.1 网站前台
 
 - 网站首页商品展示：推荐商品，分类展示部分商品，热卖商品，新商品等展示
 - 商品列表页：分页展示某类别或指定条件（搜索）的部分商品列表信息。
@@ -151,7 +151,7 @@
 - 订单处理
 - 其他扩展：商品评论、商品多图；会员收货地址管理，商品收藏；首页轮播图；站内公告、新闻；友情链接；
 
-2.2 **网站后台管理**
+2.2 网站后台管理
 
 - 后台操作：登录、退出
 - 会员信息管理：查看、修改会员状态、重置密码
@@ -160,21 +160,21 @@
 - 订单信息管理：查看订单、订单详情、处理订单
 - 其他扩展：商品评论管理、商品多图管理；会员收货地址管理，商品收藏；首页轮播图管理；站内公告、新闻管理；友情链接管理
 
-3 ） **绘制项目的功能模块 和操作流程图**
+3 ） **绘制项目的功能模块和操作流程图**
 
-3.1 **商城项目功能模块图**
+3.1 商城项目功能模块图
 
 <div align="center">
     <img width="700" src="../screenshot/12.jpg">
 </div>
 
-3.2 **商城前台用户操作流程图**
+3.2 商城前台用户操作流程图
 
 <div align="center">
     <img width="700" src="../screenshot/13.jpg">
 </div>
 
-3.3 **商城后台管理员操作流程图**
+3.3 商城后台管理员操作流程图
 
 <div align="center">
     <img width="700" src="../screenshot/14.jpg">
