update: management 2.md

--- a/management/contents/2.md
+++ b/management/contents/2.md
@@ -1,4 +1,4 @@
-### 关于项目管理
+### 前言
 
 职能部门越卖力，企业越像官僚？ 赔钱的项目也要，老板是不是疯了？ 日报，周报，月报...然并卵，项目照旧失控，都是惹不起的“爷”，先招呼谁？项目到底有完没完？做项目累？那是你“姿势”不对！ 
 
@@ -52,7 +52,7 @@
 - 项目管理过程包6个过程域,分为:**立项管理**、**结项管理**、**项目规划**、**项目监控**、**风险管理**、**需求管理**。
 - 项目研发过程包8个过程域,分为:**需求开发**、**技术预研**、**系统设计**、**实现与测试**、**系统测试**、 **Beta测试**、**客户验收**、**技术评审**。
 - 机构支撑过程包5个过程域,分为:**配置管理**、**质量保证**、**培训管理**、**外包与采购管理**、**服务与维护**。
-- 企业应根据自身情况(如发 展战略、研发实力等)适当地修改使用
+- 企业应根据自身情况(如发展战略、研发实力等)适当地修改使用。
 
 ### 项目开发流程
 
