update: management 2.md

--- a/management/contents/2.md
+++ b/management/contents/2.md
@@ -86,7 +86,7 @@
     * 分析已经存在的同类产品,提取需求。
     * 从行业标准、规则中提取需求。
     * 从 Internet 上搜查相关资料。
-- 输出：新产品概念书、调研报告、《需求说明书》、《项目建议书》、计划书和计划表
+- 输出：新产品概念书、调研报告、《需求说明书》、《项目建议书》、计划书和计划表。
 
 ### 项目系统设计
 
