update: python 84.md

--- a/python/contents/84.md
+++ b/python/contents/84.md
@@ -83,7 +83,7 @@
     <img width="700" src="./screenshot/dp-3.jpg" />
 </div>
 
-2.2 商品分类：type
+2.2 商品分类表：type
 <div align="center">
     <img width="700" src="./screenshot/dp-4.jpg" />
 </div>
@@ -179,7 +179,7 @@ CREATE TABLE `detail`(
 
 
 -- 在user上表中添加一条后台管理员账户数据
-insert into users values(null,'admin','管理员',md5('admin'),1,'北京市朝阳区大山子007号','100086','13566686868','122794105@qq.com',0,now())
+insert into users values(null,'admin','管理员',md5('admin'),1,'北京市','100086','15311111111','xyzabc@xx.com',0,now())
 ```
 
 ### 安全保密设计
