--- a/c-c++/contents/4.md
+++ b/c-c++/contents/4.md
@@ -192,7 +192,7 @@ _Static_assert	_Thread_local
     * 指针定义
     * 取内容运算
 
-### 程序设计语言的基本成分有：
+### 程序设计语言的基本成分有
 
 - 数据成分：描述程序所设计的数据
 - 运算成分：描述程序中的所有运算
