add: business 2.md

--- a/management/contents/6.md
+++ b/management/contents/6.md
@@ -1,4 +1,4 @@
-### 从客户需求弹项目周期
+### 从客户需求谈项目周期
 
 客户提出一个要求，说你要给我建一座桥，我要过河，你设计了一座桥，作为一个方案。那么客户说，这个桥设计得不错，但是我希望这个桥有文化，这就是第一次需求变更。你拿出一个有文化的桥，但是客户又说了，说你这个桥，还需要我底下能过船，你又根据他的需求又做改变，又重新设计方案，拿出一个可以过船的桥。那客户又说了，说这个桥我还希望它气派，那你怎么样，又拿出一个气派的方案。客户一次一次地提，不断地改不断地变更，团队就会跟你说，说领导这时间不够了，给我们留下来的开发的时间完全不够，领导一般会怎么说，领导说先上线后迭代，意思就是说，你先对付一个，先有个桥再说，是吧，那慢慢改进、慢慢完善。团队又告诉你说，钱也不够了，我们的成本也不够了。领导一般怎么说，先满足客户的核心需求，那啥是核心需求，就是你得先让他能过河，是吧，先得弄个桥出来，所以说用最短的时间先凑合了一个桥出来，像这样的桥，一旦洪水来了，结果就可想而知，所以说这就是我们讲的传说中的人肉运维。所以说桥如果建成这个样子，那留给我们后期的运维团队，就是一个灾难。从客户提出需求你拿方案，然后客户一遍遍地提不同的，变更的要求，你赶工期最后凑合一个上线，交给运维团队一个烂摊子、一个豆腐渣工程，这就是项目从开始到结束的全部的生命周期。
 
