update: business 3.md

--- a/business/contents/3.md
+++ b/business/contents/3.md
@@ -6,46 +6,12 @@
 
 ### 经济学的分析方法
 
-- 经济学最主要的分析方法叫成本效益分析
-- 为什么很多人对经济学有一些偏见，认为说经济学教人比较庸俗，整天谈钱的事情
-- 实际上这个说法这个批评也是有一定道理的，因为经济学它的看家本领就是成本效益分析
-- 我们每做一件事情的时候我要想一想它给我带来什么好处，然后有什么样的成本这里边
-- 还有一个非常重要的一个方法，就叫边际分析，人们说经济学的方法就是等同于边际分析
-- 所谓的边际就是往前看，往前看一步，这里边就有那个边际成本跟固定成本的一个区别
-- 所谓固定成本或者沉没成本，就是说已经发生的事情是不能改变的，这个就不应该影响我们的思维
-- 在分析决策的时候就要往前看一步，这就是边际的想法
-- 经济学的方法就是成本效益分析加上边际分析
-- 如果我们采取一个决策它的边际效益或者边际的好处大于它的边际成本的时候
-- 这个时候就应该去做如果小于就不去做，这个是整个经济学分析的最根本的方法
-- 经济学里边因为经济学是分析是社会科学的一门主要学科
-- 它一定对人的行为有一个重要的假设，比如说大家如果学心理学或者学人力资源也对人也有一定的假设
-- 在经济学里边对人的假设最重要的一个概念就是理性人的假设
-- 所谓的理性人就是跟我们讲的一个成本效益分析方法是相关的
-- 如果假如说你的边际收益大于边际成本他就去做，这个就叫理性人
-- 那这方面也是很有争议的事情，很多人经常批评说这个人太理性了，就是精致的理性人
-- 这实际是一个贬义的概念，但是，这个实际上某种程度对经济学是一个的比较委屈的一个批评
-- 理性人它的好处坏处并不见得跟我们平时讲的自私也许不一定有直接的关系
-- 假如说你要是全心全意为人民服务的人，那你的边际收益，你心里的高兴程度取决于就是别人是不是过的很好
-- 这跟自私关系并不是特别大，所以这个理性人的假设是经济学的一个最重要的假设
-- 那这里边我们还要提到一个预期的概念，我们说理性人应该是预期的收益跟预期的成本之间的权衡
-- 为什么要提到预期，因为我们知道就是说现实生活中充满了不确定性，很多很多事情是我们不能预测的
-- 就拿中美贸易之争来讲，你看中间有太多反复，很多事情是任何人都预测不出来
-- 这个时候我们又不得不做决策，然后又信息不完全，又有很多不确定性，就只能根据我们现有的知识和我们的能力对未来做一个大概的判断，这就是预期的概率
-- 所以根据现有的知识和信息来做出的决策，这叫预期
-- 所有如果预期的好处跟预期的成本进行权衡以后，这样就是理性人决策的一个基础，那么我们知道在经济中最重要的两个决策者是消费者和生产者
-- 经济学认为消费者它的目标函数或者说想达到的目的什么，这就叫消费者剩余的最大化
-- 大家设身处地的想一想，我们每个人都是消费者，因为我们的收入有限，然后为了生存你又要购买很多的商品和服务
-- 这个时候你要达到的目的就是希望能够用最小的成本，最少的钱来实现我最大的一个满足程度
-- 这样就是所谓支付意愿跟实际支付的钱之间的这个差额，这个叫**消费者剩余**，所以消费者希望是消费者剩余越大越好
-- 一个理性的生产者或者说企业它的目标函数是什么，我们说终极的目标是利润最大化
-- 所以这也是经济学里边一个很重要的假设，但是大家可能有时候就会感到很困惑，我们发现现实生活中很多企业它并不是目标函数可能不是利润最大化
-- 比如说像京东，大家讲很多年都不赚钱，像Facebook这些企业媒体它也不赚钱，但是它的估值又特别的高，这其中是不是有矛盾，是不是经济学的假设是错误的
-- 我们说这里边你要看长远长期跟短期之间的关系，所以实际上是并没有矛盾的
-- 所以为什么像这些不赚钱的企业它的估值很高，是人们期望它未来的盈利能力会很大
-- 所以从终极目标来讲，还是要利润最大化是企业的最终的目标
-- 我们可以观察过去这些年是吧像这些竞争的社交媒体，包括这些电商等等，实际最后被淘汰的一定是赚钱能力不行的那些企业
-- 所以这个假设是完全正确的，就是像巴菲特讲的那句话，大潮退去以后才会知道谁在裸泳
-- 最后不能够盈利的企业终究会被淘汰
-- 利润最大化是我们要分析的，企业的一个目标函数
-- 以上几点就是经济学思维方式，最重要的几个方面：成本效应分析方法、边际分析、理性人
-- 这些这是构成了我们整个经济学，这个大厦的一些支柱
+这样我们首先来介绍一下经济学的分析方法。如果有人问你说学了这么多经济学的话，那么它的分析方法如果用一个词来概括的话你会怎么讲，那我们就说经济学最主要的分析方法叫成本效益分析。所以这也就是为什么很多人对经济学有一些偏见，认为说经济学教人比较庸俗，整天谈钱的事情。实际上这个说法这个批评也是有一定道理的，因为经济学它的看家本领就是成本效益分析，所以我们每做一件事情的时候我要想一想它给我带来什么好处，然后有什么样的成本这里边。
+
+还有一个非常重要的一个方法，就叫边际分析，所以人们说经济学的方法就是等同于边际分析，它是什么意思，所谓的边际就是往前看，往前看一步，这里边就有那个边际成本跟固定成本的一个区别，所谓固定成本或者沉没成本，就是说已经发生的事情是不能改变的，这个就不应该影响我们的思维，所以我们在分析决策的时候就要往前看一步，这就是边际的想法。所以经济学的方法就是成本效益分析加上边际分析，所以如果我们采取一个决策它的边际效益或者边际的好处大于它的边际成本的时候，这个时候就应该去做, 如果小于就不去做，所以这个是整个经济学分析的最根本的方法
+
+那么经济学里边因为经济学是分析是社会科学的一门主要学科，所以它一定对人的行为有一个重要的假设，比如说大家如果学心理学或者学人力资源也对人也有一定的假设，那么在经济学里边对人的假设最重要的一个概念就是理性人的假设，所谓的理性人就是跟我们讲的一个成本效益分析方法是相关的，如果假如说你的边际收益大于边际成本他就去做，这个就叫理性人。那这方面也是很有争议的事情，很多人经常批评说这个人太理性了，就是精致的理性人。这实际是一个贬义的概念但是，这个实际上某种程度对经济学是一个的比较委屈的一个批评，因为这个理性人它的好处坏处并不见得跟我们平时讲的自私也许不一定有直接的关系，假如说你要是全心全意为人民服务的人，那你的边际收益，你心里的高兴程度取决于就是别人是不是过的很好，所以这跟自私关系并不是特别大，所以这个理性人的假设是经济学的一个最重要的假设，那这里边我们还要提到一个预期的概念，我们说理性人应该是预期的收益跟预期的成本之间的权衡，为什么要提到预期，因为我们知道就是说现实生活中充满了不确定性，很多很多事情是我们不能预测的。
+
+就拿中美贸易之争来讲，你看中间有太多反复，很多事情是任何人都预测不出来，这个时候我们又不得不做决策，然后又信息不完全，又有很多不确定性就只能根据我们现有的知识和我们的能力对未来做一个大概的判断，这就是预期的概率。所以根据现有的知识和信息来做出的决策，这叫预期。所有如果预期的好处跟预期的成本进行权衡以后，这样就是理性人决策的一个基础，那么我们知道在经济中最重要的两个决策者是消费者和生产者，所以经济学认为消费者它的目标函数或者说想达到的目的什么，这就叫消费者剩余的最大化。大家设身处地的想一想，我们每个人都是消费者，因为我们的收入有限，然后为了生存你又要购买很多的商品和服务，所以这个时候你要达到的目的就是希望能够用最小的成本，最少的钱来实现我最大的一个满足程度，所以这样就是所谓支付意愿跟实际支付的钱之间的这个差额，这个叫消费者剩余，所以消费者希望是消费者剩余越大越好，一个理性的生产者或者说企业它的目标函数是什么，我们说终极的目标是利润最大化。所以这也是经济学里边一个很重要的假设，但是大家可能有时候就会感到很困惑，我们发现现实生活中很多企业它并不是目标函数可能不是利润最大化，比如说像京东，大家讲很多年都不赚钱，像Facebook这些企业媒体它也不赚钱，但是它的估值又特别的高，这其中是不是有矛盾，是不是经济学的假设是错误的。我们说这里边你要看长远长期跟短期之间的关系，所以实际上是并没有矛盾的，所以为什么像这些不赚钱的企业，它的估值很高，是人们期望它未来的盈利能力会很大，所以从终极目标来讲，还是要利润最大化是企业的最终的目标，我们可以观察过去这些年，像这些竞争的社交媒体，包括这些电商等等，实际最后被淘汰的一定是赚钱能力不行的那些企业，所以这个假设是完全正确的。就是像巴菲特讲的那句话，大潮退去以后才会知道谁在裸泳，所以就是说最后不能够盈利的企业终究会被淘汰，所以说利润最大化是我们要分析的，企业的一个目标函数。
+
+所以以上几点就是经济学思维方式，最重要的几个方面：成本效应分析方法、边际分析、理性人、这些这是构成了我们整个经济学，这个大厦的一些支柱
