update: business 11.md

--- a/business/contents/10.md
+++ b/business/contents/10.md
@@ -1,8 +1,8 @@
 ### 不对称信息与机制设计
 
-因为我们知道就是说不对称信息是现实生活中比比皆是的，一个现象就是往往多数情况下当我们做决策的时候，你面对的一些信息的不确定因素，然后就是所谓的不对称信息就是交互的，双方知道的东西不一样，所以这就叫不对称信息，你比如说我们去买东西的时候，可能卖东西的人知道这个东西是真的假的或者质量如何，买东西的人可能看不出来，这就是一个不对称信息的问题。另外从企业管理的角度来讲，假如你交给下属一个活让他去干、尽心尽力的去干，结果他是不是真的努力了或者是去做什么事情，有没有偷懒，有没有以权谋私等等，这些现象你可能看不到，所以这也是个不对称信息的问题。
+因为我们知道就是说不对称信息是现实生活中比比皆是的，一个现象就是往往多数情况下当我们做决策的时候，你面对的一些信息的不确定因素，所谓的不对称信息就是交互的双方知道的东西不一样，所以这就叫不对称信息，你比如说我们去买东西的时候，可能卖东西的人知道这个东西是真的假的或者质量如何，买东西的人可能看不出来，这就是一个不对称信息的问题。另外从企业管理的角度来讲，假如你交给下属一个活让他去干、尽心尽力的去干，结果他是不是真的努力了或者是去做什么事情，有没有偷懒，有没有以权谋私等等，这些现象你可能看不到，所以这也是个不对称信息的问题。
 
-所以由此我们就可以看出来这个不对称信息问题的解决有非常实际的意义，那么不对称信息的问题大概分成两类，第一类的问题叫所谓的隐藏信息的问题，第二类叫隐藏行动，隐藏信息就是说如果双方知道的东西不一样，然后其中的一方不告诉另一方，这个就叫隐藏信息的行为，然后隐藏行动就是说做的事情不让对方看到，不让对方知晓，这叫隐藏行动行为，所以这两种类型的不对称信息的行为会导致不同的问题，那么在不对称理论里边讲，就叫所谓逆向选择跟道德风险的问题，所以大家可能平时你看书看报纸或者上网时经常听到叫逆向选择或者道德风险的问题，那道德是什么意义下面我们就稍微介绍一下所谓逆向选择。就说它因为信息不对称导致的结果就是坏的东西越来越多好的越来越少，这就是所谓的劣币驱逐良币。
+所以由此我们就可以看出来这个不对称信息问题的解决有非常实际的意义，那么不对称信息的问题大概分成两类，第一类的问题叫所谓的隐藏信息的问题，第二类叫隐藏行动，隐藏信息就是说如果双方知道的东西不一样，然后其中的一方不告诉另一方，这个就叫隐藏信息的行为，然后隐藏行动就是说做的事情不让对方看到，不让对方知晓，这叫隐藏行动的行为，所以这两种类型的不对称信息的行为会导致不同的问题，在不对称理论里边讲，就叫所谓逆向选择跟道德风险的问题，所以大家可能平时你看书看报纸或者上网时经常听到叫逆向选择或者道德风险的问题，那道德是什么意义下面我们就稍微介绍一下所谓逆向选择。就说它因为信息不对称导致的结果就是坏的东西越来越多好的越来越少，这就是所谓的劣币驱逐良币。
 
 例①：
 
@@ -14,7 +14,7 @@
 
 激励相容原理：
 
-那么所谓道德风险的问题也就是隐藏行动，这里边最重要的就是叫Principal agent或者委托代理的问题，就是说一个人把活交给另外一个人去干，这个委托人把活加给代理人，代理人做的行动委托人不知道，所以最后也会导致一个市场的失败，你比如说一个企业派一个推销员去推销东西，推销员不尽心尽力，最后就会使得它的那个结果没有达到最优，最后的时候影响了利润所以这些，就是属于不对称信息的应用，在这个不对称信息的问题里边怎么解决，所以这个就是所谓的机制设计的问题，所以机制设计的问题是针对不对称信息情况下近些年非常热门的一个话题。就说怎么设置机制来解决不对称信息带来的逆向风险和道德风险的问题，逆向选择和道德风险的问题，就叫激励相溶原理，之所以会出现道德风险的问题，之所以会出现最后市场失败，就是因为委托代理人他的目标函数不一样，所以这个时候，就是说委托人的目标跟代理人可能是不一样的情况下就会出现市场失灵的问题。
+那么所谓道德风险的问题也就是隐藏行动，这里边最重要的就是叫Principal agent或者委托代理的问题，就是说一个人把活交给另外一个人去干，这个委托人把活加给代理人，代理人做的行动委托人不知道，所以最后也会导致一个市场的失败，你比如说一个企业派一个推销员去推销东西，推销员不尽心尽力，最后就会使得它的那个结果没有达到最优，最后的时候影响了利润所以这些，就是属于不对称信息的应用，在这个不对称信息的问题里边怎么解决，所以这个就是所谓的机制设计的问题，所以机制设计的问题是针对不对称信息情况下近些年非常热门的一个话题。就说怎么设置机制来解决不对称信息带来的逆向选择和道德风险的问题，就叫激励相溶原理，之所以会出现道德风险的问题，之所以会出现最后市场失败，就是因为委托代理人他的目标函数不一样，所以这个时候，就是说委托人的目标跟代理人可能是不一样的情况下就会出现市场失灵的问题。
 
 例③：
 
