add: business 17.md

--- a/business/contents/17.md
+++ b/business/contents/17.md
@@ -22,6 +22,6 @@
 
 - 所有商业模式的起点和终点,一定来自于客户细分。 
 - 然后我们进入到了,商业模式逻辑中的一个核心的一个构造块, 我们叫价值主张。
-- 有了客户细分之后, 要有对应的价值主张, 然后你如何把你的价值主张, 交付出去，这就要需要离不开渠道通路
+- 有了客户细分之后, 要有对应的价值主张, 然后你如何把你的价值主张, 交付出去，这就要需要离不开渠道通路。
 - 那么最终你的商业模式, 要跟客户搭建一个什么样的关系, 这个构造块我们叫做客户关系。
 - 那你所有的努力都做完之后, 你如何赚钱, 那这个构造块, 我们叫做收入来源。
