add: business 30.md

--- a/business/contents/30.md
+++ b/business/contents/30.md
@@ -42,4 +42,6 @@
 
 于是我们企业如果知道他真正在想什么真正在关心什么我们就有可能利用他们关心的东西把他们最实惠的商品在最适当的时间点推送给他们，用这种方法来推动整个市场的发展，但这就有一个最重要的前提，你一定要了解客户真实需求，而且当代这种大数据分析方法又是帮助我们企业了解客户需求兴趣最重要的方法之一，大家一定要注意不是全部，但是在今天这个环境下非常好的一种方法，这就是我们第八讲要讲的内容。
 
-第八讲我们做一个小小地总结，就是一句话，了解客户是我们做好市场营销的前提，而今天我们所讲这个大数据分析方法又是帮助当代客户了解客户的重要方法之一
+### 总结
+
+了解客户是我们做好市场营销的前提，而今天我们所讲这个大数据分析方法又是帮助当代客户了解客户的重要方法之一
