update: business 30.md

--- a/business/contents/30.md
+++ b/business/contents/30.md
@@ -4,7 +4,7 @@
 
 大数据的来源：
 
-现在的科技为我们提供了一个非常好的方法，了解客户的方法，这个方法就是我们所讲的叫大数据分析，下面我们看看这个大数据分析是什么东西是怎么回事，它的起源是如何起源，如何发展起来的。如果在座的各位学过管理的话都知道在管理领域我们讲数据和数据分析，我们已经讲了上百年了，这是个老生常谈，没有任何新鲜的地方在里头，现在为什么这个大数据能流行起来呢，大家如果从字面上理解的话，你会发现数据和数据分析跟大数据相差就一个字，噱头就一个字大，那这个大数据，为什么今天能流行起来呢，源于我们当代这个特殊的历史背景和技术环境，大数据这个词是从2011年才开始出现才开始流行起来的，那么大家掐着指头算到现在有不过七个年头，大数据这个词产生来源不是源于学者 ，不是源于研究而是源自于一个企业的研究报告，大家都知道2011年的时候有一个企业叫麦肯锡，他发表了一个企业研究报告，这个报告的名字叫什么，就叫大数据、生产力、发展力下一个前沿，就没有想到这个报告一旦发出来以后，立刻在世界各国获得了强烈地反响，这个报告所讲的内容恰好跟当代这个时代环境非常吻合，所以一下就在世界各国传开了。
+现在的科技为我们提供了一个非常好的方法，了解客户的方法，这个方法就是我们所讲的叫大数据分析，下面我们看看这个大数据分析是什么东西是怎么回事，它的起源是如何起源，如何发展起来的。如果在座的各位学过管理的话都知道在管理领域我们讲数据和数据分析，我们已经讲了上百年了，这是个老生常谈，没有任何新鲜的地方在里头，现在为什么这个大数据能流行起来呢，大家如果从字面上理解的话，你会发现数据和数据分析跟大数据相差就一个字，噱头就一个字大，那这个大数据，为什么今天能流行起来呢，源于我们当代这个特殊的历史背景和技术环境，大数据这个词是从2011年才开始出现才开始流行起来的，大数据这个词产生来源不是源于学者 ，不是源于研究而是源自于一个企业的研究报告，大家都知道2011年的时候有一个企业叫麦肯锡，它发表了一个企业研究报告，这个报告的名字叫什么，就叫《大数据:创新、竞争和生产力的下一个前沿》，就没有想到这个报告一旦发出来以后，立刻在世界各国获得了强烈地反响，这个报告所讲的内容恰好跟当代这个时代环境非常吻合，所以一下就在世界各国传开了。
 
 中国大数据：
 
@@ -26,9 +26,9 @@
 
 例③：
 
-大家在六年以前北京有一款黄金地段，有一块不规则的地皮按照政府规定要挂牌出售，因为地皮非常好，这个地段非常好，所以好多大的房地产商都蜂拥而至，从报名的情况来讲竞争非常激烈，如何了解客户兴趣，确定我们出价情况和工程项目的利益盈亏平衡点却是每一个出价人每一个房地产商心里拿不准，催生一个难题，心里都拿不准，就是如何了解客户兴趣，我拿到这个地皮，我能盖什么房子，我能够算一算我们盖房子需要多少钱，能卖出多少钱，如何掌握这个利益盈亏平衡点能够保证自己不赔能赚钱，这个对任何一个房地产商来讲都变得非常重要，怎么了解客户的兴趣呢？于是有房地产商前期做了大量的问卷调查，也就是说在马路上发了很多调查问卷，就问大家你们需要什么房子喜欢什么房子，做了大量的调查，结果调查完了以后，调查量非常大，把这个数据收集一统计一总结，发现这个调查问卷根本不行，为什么根本不行呢？发现真正要买房子的人很少有人会愿意填你这个调查问卷，那么有人填了这个调查问卷往往是什么呢？你给他个小礼品给他个小好处，他为了这个好处来拿这个表格，但是他心里根本不要买房子，怎么能看出这一点呢？我们通过调查问卷和后来验证问题的时候我们发现他根本不是要买房子的目标客户，所以拿到这个调查问卷数据是拿了很多，但是如果你真正拿这个数据去指导企业去做决策来指导企业去参加竞价拍卖，你发现可能会害了企业，那怎么办，在无奈情况下，因为既然调查行不通了，我们又必须要了解客户行为在无奈情况下，正好这时候大数据出来了，有人就给某一家房地产企业建议，我们可以采用大数据分析方法，自动提取捕捉客户下意识的数据，通过这些下意识数据分析能够了解到这边地区的年轻人他们到底喜欢什么房子，然后再根据这个房子的情况看看这个地皮，我们能盖出这样的房子，能盖出多少栋楼，有多少套房子，每套房子根据当时地皮的价格是多少，能卖吃多少钱，然后再综合的平衡一下看看，我们能出价出到什么程度，我们才能够保赚不赔，结果没有想到，通过这个分析以后得到了很好的效果。
+大家在六年以前北京有一款黄金地段，有一块不规则的地皮按照政府规定要挂牌出售，因为地皮非常好，这个地段非常好，所以好多大的房地产商都蜂拥而至，从报名的情况来讲竞争非常激烈，如何了解客户兴趣，确定我们出价情况和工程项目的利益盈亏平衡点却是每一个出价人每一个房地产商心里拿不准，催生一个难题，心里都拿不准，就是如何了解客户兴趣，我拿到这个地皮，我能盖什么房子，我能够算一算我们盖房子需要多少钱，能卖出多少钱，如何掌握这个利益盈亏平衡点能够保证自己不赔能赚钱，这个对任何一个房地产商来讲都变得非常重要，怎么了解客户的兴趣呢？于是有房地产商前期做了大量的问卷调查，也就是说在马路上发了很多调查问卷，就问大家你们需要什么房子喜欢什么房子，做了大量的调查，结果调查完了以后，调查量非常大，把这个数据收集一统计一总结，发现这个调查问卷根本不行，为什么根本不行呢？发现真正要买房子的人很少有人会愿意填你这个调查问卷，那么有人填了这个调查问卷往往是什么呢？你给他个小礼品给他个小好处，他为了这个好处来拿这个表格，但是他心里根本不要买房子，怎么能看出这一点呢？我们通过调查问卷和后来验证问题的时候我们发现他根本不是要买房子的目标客户，所以拿到这个调查问卷数据是拿了很多，但是如果你真正拿这个数据去指导企业去做决策来指导企业去参加竞价拍卖，你发现可能会害了企业，那怎么办，在无奈情况下，因为既然调查行不通了，我们又必须要了解客户行为在无奈情况下，正好这时候大数据出来了，有人就给某一家房地产企业建议，我们可以采用大数据分析方法，自动提取捕捉客户下意识的数据，通过这些下意识数据分析能够了解到这边地区的年轻人他们到底喜欢什么房子，然后再根据这个房子的情况看看这个地皮，我们能盖出这样的房子，能盖出多少栋楼，有多少套房子，每套房子根据当时地皮的价格是多少，能卖出多少钱，然后再综合的平衡一下看看，我们能出价出到什么程度，我们才能够保赚不赔，结果没有想到，通过这个分析以后得到了很好的效果。
 
-大家注意看我们屏幕上给出的，当时我们分析的这样一个图，这个图包括什么呢？第一，我们可以考虑到北京各个城区年轻人在聊天的时候他们自发聊天的时候，他们最感兴趣是什么房型，比如说是大户型还是小户型，是塔楼还是板楼，是毛坯房还是精装房，如果他把这些东西都了解清楚以后他就知道在这一块地皮附近的人喜欢什么样的楼盘，比如喜欢精装还是毛坯房，是塔楼还是板楼，是什么什么大户型小户型，他都了解很清楚，了解清楚以后，他再可以考虑一下，这块地皮大概设计师能够设计出大家感兴趣的楼盘多少栋，每栋楼有多少套房子，每套房子若按当时价格的话能拍卖出什么价格，于是他就可以决定我拍卖这个地的时候扣除成本以后我拿多少钱才能拿到这个地我才能保证不赔，所以个最后的结果应该讲非常成功，这家房地产商果然是用这种方式成功地拿下了这个黄金地段这块地，而且产生了很好的营销效果。
+我们可以考虑到北京各个城区年轻人在聊天的时候他们自发聊天的时候，他们最感兴趣是什么房型，比如说是大户型还是小户型，是塔楼还是板楼，是毛坯房还是精装房，如果他把这些东西都了解清楚以后他就知道在这一块地皮附近的人喜欢什么样的楼盘，比如喜欢精装还是毛坯房，是塔楼还是板楼，是什么什么大户型小户型，他都了解很清楚，了解清楚以后，他再可以考虑一下，这块地皮大概设计师能够设计出大家感兴趣的楼盘多少栋，每栋楼有多少套房子，每套房子若按当时价格的话能拍卖出什么价格，于是他就可以决定我拍卖这个地的时候扣除成本以后我拿多少钱才能拿到这个地我才能保证不赔，所以最后的结果应该讲非常成功，这家房地产商果然是用这种方式成功地拿下了这个黄金地段这块地，而且产生了很好的营销效果。
 
 所以这就是我们看到大数据分析的一个好处，这是个小例子，而且我们说这种大数据分析跟我们传统调查问卷得到的这个数据分析就明显的不同，不同在什么地方呢？我们总结归纳起来它有两个重要的特征，哪两个重要特征？
 
@@ -38,10 +38,10 @@
 
 ②
 
-第二个特征呢我们说这种方式得到的信息它具有3V特征，什么叫3V呢，就是三个英文单词，打头字母都是V，这三个英文单词正好反映了大数据分析捕捉大数据的特征，哪三个英文单词，第一个英文单词是海量Volume，量非常大，捕捉量非常大，大家知道从统计意义上来讲量如果越大的话它得到的效果就会越准确，第二它的样本多样化Variety，多样化样本越多样化，它反应的市场规律就越准确，所以这是第二个V，第三个V它捕捉的方式高频率Velocity，他可以非常高的频率，每时每秒都能够获取，所以如果具有这样三个特征而去自动捕捉的话，那么这种数据相对于传统的数据调查方法来讲会更加可靠更加真实，所以这种大数据分析方法它有助于我们企业更好的了解客户的真实需求知道他们真正在想什么，真正在关心什么。
+第二个特征，我们说这种方式得到的信息它具有3V特征，什么叫3V呢，就是三个英文单词，打头字母都是V，这三个英文单词正好反映了大数据分析捕捉大数据的特征，哪三个英文单词，第一个英文单词是海量Volume，量非常大，捕捉量非常大，大家知道从统计意义上来讲量如果越大的话它得到的效果就会越准确，第二它的样本多样化Variety，多样化样本越多样化，它反应的市场规律就越准确，所以这是第二个V，第三个V它捕捉的方式高频率Velocity，他可以非常高的频率，每时每秒都能够获取，所以如果具有这样三个特征而去自动捕捉的话，那么这种数据相对于传统的数据调查方法来讲会更加可靠更加真实，所以这种大数据分析方法它有助于我们企业更好的了解客户的真实需求知道他们真正在想什么，真正在关心什么。
 
 于是我们企业如果知道他真正在想什么真正在关心什么我们就有可能利用他们关心的东西把他们最实惠的商品在最适当的时间点推送给他们，用这种方法来推动整个市场的发展，但这就有一个最重要的前提，你一定要了解客户真实需求，而且当代这种大数据分析方法又是帮助我们企业了解客户需求兴趣最重要的方法之一，大家一定要注意不是全部，但是在今天这个环境下非常好的一种方法，这就是我们第八讲要讲的内容。
 
 ### 总结
 
-了解客户是我们做好市场营销的前提，而今天我们所讲这个大数据分析方法又是帮助当代客户了解客户的重要方法之一
+了解客户是我们做好市场营销的前提，而今天我们所讲这个大数据分析方法又是帮助当代客户，了解客户的重要方法之一
