update: dsa 5.md

--- a/dsa/contents/5.md
+++ b/dsa/contents/5.md
@@ -127,6 +127,15 @@ if __name__ == '__main__':
 4 3 2 1
 ```
 
+输出样例为:
+
+```shell
+1
+2
+3
+4
+```
+
 3 ) **思路**
 
 这里主要思路是：准备2个栈，myStack是初始状态随机输入的栈无序，result是最终的输出栈，有序。将myStack栈顶元素与result中的所有元素做比较，找到合适的位置后将result栈中该位置后面的元素全部依次存到myStack栈顶，之后再将这些移动的元素请回result栈中，达到一次插入排序，如此循环操作，核心思想是：myStack中取出的栈顶与result栈中的栈顶元素做比较。
