update: dsa & python

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -71,13 +71,31 @@ int getResult(int n, int *h) {
 
 ```cpp
 // todo
+
 ```
 
 **算法4：通过单调栈来计算，时间复杂度为: $O(n^2)$的实现优化版本**
 
+```cpp
+// todo
+
+```
+
 总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：(hi - lo - 1) * hi
+
+**算法5：通过分治策略来处理**
+
+```cpp
+// todo
+```
 
 ### 相关说明
 
-- 普通电脑中运算$10^8$是可以的, 到了9次方就会变慢, 同样的道理，服务器也是一样都会有一定的瓶颈，我们追求速度的话，一定要优化复杂度, 但蛮力算法通常是解决问题的第一步。
-- 一般而言，优化顺序是：蛮力、贪心、减治、分治
+- 普通电脑中运算$10^8$是可以的, 到了9次方就会变慢
+- 同样的道理，服务器也是一样都会有一定的瓶颈，我们追求速度的话，一定要优化复杂度, 但蛮力算法通常是解决问题的第一步
+- 一般而言，优化顺序是：蛮力、贪心、减治和分治
+
+### 扩展
+
+- 还有一种结构叫做 LookUpTable, 需要考虑 构造、存储和查询的复杂度，尽管查询很快，只需要O(1), 但是构造和查询很复杂$O(n^2)$, 效率令人堪忧
+- 另一种是线段树 Segment Tree, 构，存，查的复杂度分别为：nlogn、n、logn
