--- a/python/contents/70.md
+++ b/python/contents/70.md
@@ -337,6 +337,16 @@ Redis数据库
         sudo /etc/init.d/redis-server stop
         sudo /etc/init.d/redis-server restart
         ```
+- Linux下的安装：（如 centOS）
+    * rpm包安装, 通过yum安装, 先搜索一下：yum search redis 或 yum info redis 发现没有, 这个方式不太好
+      * EPEL (Extra Packages for Enterprise Linux)是基于 Fedora 的一个项目，为“红帽系”的操作系统提供额外的软件包，适用于 RHEL、CentOS 和 Scientific Linux.
+      * yum install epel-release -y
+      * yum info redis (发现可以了)
+      * yum install redis -y
+      * systemctl start redis
+      * systemctl restart redis
+      * systemctl enable redis （这里设置开机启动）
+    * 其他方式：源代码编译，二进制包安装
 
 - Mac下的安装
     * 安装命令：brew install redis
@@ -527,10 +537,12 @@ redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
  > exists list1  # 判断键名为list1的是否存在 存在返回1， 不存在返回0
  > del list1  # 删除一个键（名为list1）
  > expire list1 10 # 设置键名为list1的过期时间为10秒后
+ > type key # 查看key的类型
  > ttl list1 # 查看键名为list1的过期时间，若为-1表示以过期
  > move age 1 # 将键名age的转移到1数据库中。
  > select 1 # 表示进入到1数据库中，默认在0数据库 
  > persist age # 移除age的过期时间（设置为过期）
+ > flushall # 清除redis所有数据
 ```
 
 ### Redis高级实用特性
@@ -539,7 +551,10 @@ redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
 
 1.1 进入配置文件并设置密码
 - $`/usr/local/redis/etc/redis.conf` 注意：此处配置文件为你电脑上的具体路径，可能不一样，只作参考
-- 设置：requirepass redis的密码
+- 查找文件：$`find / -name redis.conf` 找到了，比如上面的
+- 查找端口：$`cat /etc/redis.conf | grep 6379` 可以修改端口
+- 查找密码：$`cat /etc/redis.conf | grep pass` 可以修改密码
+- 重新设置密码：requirepass redis的密码 如：$`requirepass 123456`
 
 1.2 重启服务
 - $`./redis-cli shutdown` 执行关闭
@@ -552,6 +567,8 @@ redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
     ```
 
 - 方式2：$`./redis-cli -a 密码` 连接时指定密码来进行授权
+
+- 当然加入环境变量后不需要相对路径来调用，全路径连接示例：$`redis-cli -h 127.0.0.1 -p 6379 -a 123456`, 123456是假设的密码
 
 2 ) 主从复制
 
