update: nodejs 9.md

--- a/nodejs/contents/9.md
+++ b/nodejs/contents/9.md
@@ -107,3 +107,10 @@ btn.onclick=function(){
     socket.emit('to-server','我是客户端的数据'); 
 }
 ```
+
+### socket.io的应用场景
+
+- 即时通信：聊天室，比如QQ
+- 直播弹幕的实现
+- 移动App与服务器的数据同步
+- 智能客服机器人
